# WebtoonScraper

./: .cspell.json  .gitignore  .mkdocs.yml  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.md  WebtoonScraper.py  build.py  example.py  getsoup.py  pyinstaller.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: build.yml  codeql.yml  pyinstaller.yml  release.yml
.scraper-beta/: pyvenv.cfg
WebtoonScraper/: A_FolderManager.py  A_FolderMerger.py  B_Webtoon.py  BestChallengeScraper.py  BufftoonScraper.py  C_Scraper.py  CanvasScraper.py  D_NaverWebtoonScraper.py  E_BestChallengeScraper.py  F_WebtoonOriginalsScraper.py  FolderManager.py  G_WebtoonCanvasScraper.py  H_TelescopeScraper.py  I_BufftoonScraper.py  J_NaverPostScraper.py  K_NaverGameScraper.py  L_LezhinComicsScraper.py  L_LezhinUnshuffler.py  M_KakaopageWebtoonScraper.py  M_Kakaopage_queries.py  NaverGameScraper.py  NaverPostScraper.py  NaverWebtoonScraper.py  Scraper.py  TelescopeScraper.py  Webtoon.py  WebtoonCanvasScraper.py  WebtoonOriginalsScraper.py  WebtoonsScraper.py  __init__.py  __main__.py  a_folder_merger.py  add_webtoon_viewer.py  base.py  directory_merger.py  directory_state.py  exceptions.py  foldermanagement.py  getsoup.py  image_concatenator.py  (+5 more)
WebtoonScraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
WebtoonScraper/_processors/: __init__.py  directory_merger.py  image_concatenator.py  webtoon.py  webtoon_viewer.py
WebtoonScraper/processing/: __init__.py  _image_concatenator.py  _lezhin_unshuffler.py  _viewer.py  _webtoon.py  _webtoon_viewer.py  directory_merger.py
WebtoonScraper/scrapers/: A_scraper.py  B_naver_webtoon.py  C_best_challenge.py  D_webtoon_originals.py  E_webtoon_canvas.py  F_telescope.py  G_bufftoon.py  H_naver_post.py  I_naver_game.py  J_lezhin_comics.py  J_lezhin_unshuffler.py  K_kakaopage.py  K_kakaopage_queries.py  L_naver_blog.py  M_tistory.py  N_kakao_webtoon.py  _01_helpers.py  _01_scraper.py  _02_naver_webtoon.py  _02_naver_webtoon_extra.py  _03_webtoon_originals.py  _04_bufftoon.py  _05_naver_post.py  _06_naver_game.py  _07_lezhin_comics.py  _07_lezhin_unshuffler.py  _08_kakaopage.py  _08_kakaopage_queries.py  _09_naver_blog.py  _10_tistory.py  _11_kakao_webtoon.py  __init__.py  _callback_manager.py  _helpers.py  _lezhin_comics.py  _lezhin_unshuffler.py  _naver_webtoon.py  _naver_webtoon_extra.py  _scraper.py  _wbtn_scraper.py
docs/: .readthedocs.yaml  README-en.md  README_eng.md  app-guide.md  copyright.md  developer_guide.md  download_availability.md  executable-guide.md  get-bearer-emanbae.html  get-bearer.html  get-cookie.html  get_cookie.html  how-to-use.md  how_to_use.md  index.md  legacy_how_to_use.md  platforms.md  python_script.md  releases.md  requirements.txt  specific_platform_download.md  specific_webtoon_download.md
docs/docs/mkdocs/: 01-installing.md  91-merging.md
docs/mkdocs/: 01-installing.md  02-downloading-cli.md  03-downloading-app.md  04-cookie.md  10-platforms.md  11-directory-name.md  90-download-range.md  92-concatenating.md  94-copyright.md  95-releases.md
pyinstaller_build/: pyinstaller.py
test/: __init__.py  test.py
tests/: test.py  test_episode_range.py  test_scrapers.py  tests.py
