[project]
name = "WebtoonScraper"
description = "Scraping webtoons with ease"
readme = "README.md"
authors = [{ name = "ilotoki0804", email = "ilotoki0804@gmail.com" }]
license = "Apache-2.0"
keywords = [
    "webtoon",
    "webtoon scraper",
    "naver webtoon",
    "webtoon downloader",
    "download webtoon",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.13"
dependencies = [
    "filetype>=1.2.0",
    "httpc~=0.14.0",
    "pyfilename~=0.6.0",
    "rich>=15.0.0",
    "yarl>=1.9.11",
    "pillow>=12.3.0",
    "fieldenum~=0.2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
full = []

[project.scripts]
WebtoonScraper = "WebtoonScraper.__main__:main"
webtoon = "WebtoonScraper.__main__:main"

[project.urls]
Documentation = "https://docs.wbtn.org/ko/latest/"
Repository = "https://github.com/ilotoki0804/WebtoonScraper"
Changelog = "https://docs.wbtn.org/ko/latest/releases/"
Funding = "https://www.patreon.com/ilotoki0804"

[tool.hatch.version]
path = "WebtoonScraper/base.py"

[tool.hatch.build.targets.wheel]
packages = ["WebtoonScraper"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=9.1.1",
]

[tool.ruff]
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
